--- a/public/style.css
+++ b/public/style.css
@@ -19,12 +19,13 @@ body {
   position: relative;
   background-color: #e2e8f0;
 }
-
-#messages {
-  height: calc(100%);
+.message-box {
+  overflow-y: scroll;
   width: 100%;
+  height: 80%;
+}
+#messages {
   margin: 0;
-  padding: 0;
   padding: 0.7vw 1vw;
   width: 20vw;
 }
@@ -166,4 +167,7 @@ span {
   margin-left: 0.5rem;
   color: #e2e8f0;
   font-size: 0.8rem;
+}
+.curr-room-members {
+  margin-top: 4px !important;
 }
